--- a/package.json
+++ b/package.json
@@ -6,20 +6,20 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "activitystrea.ms": "^0.1.0",
-    "body-parser": "~1.0.0",
-    "date-time-string": "0.0.8",
-    "ejs": "^2.2.4",
-    "express": "~4.0.0",
-    "jsonld": "^0.3.22",
-    "jsonlint": "^1.6.2",
-    "method-override": "~1.0.0",
-    "morgan": "~1.0.0",
-    "request": "^2.53.0",
-    "util": "^0.10.3"
+    "activitystrea.ms": "^2.1.3",
+    "body-parser": "^1.19.0",
+    "date-time-string": "0.0.9",
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "jsonld": "^4.0.1",
+    "jsonlint": "^1.6.3",
+    "method-override": "^3.0.0",
+    "morgan": "^1.10.0",
+    "request": "^2.88.2",
+    "util": "^0.12.3"
   },
   "engines": {
-    "node": "0.10.*"
+    "node": "14.15.4"
   },
   "repository": {}
 }
